--- a/index.html
+++ b/index.html
@@ -1,17 +1,15 @@
 <!DOCTYPE html>
 	<head>
     	<meta charset="UTF-8">
-    	<title>Rock, Paper, Scissors</title>
+    	<title>Psychic</title>
     	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 	</head>
 	<body>
                 <center><img src="assets/images/image1.jpeg" height="200px" width="200px"></center>
 		<div class="panel panel-default">
-    	<div class="panel-body"><h1>Choose first to 5 wins!</h1> <br/>
-                        <button onclick="rock()" class="btn-info">Rock</button>
-                        <button onclick="paper()" class="btn-info">Paper</button>
-                        <button onclick="scissors()" class="btn-info">Scissors</button>
+    	<div class="panel-body"><h1>Want to play psychic??? answer yes or yes</h1> <br/>
+                        <button onclick="yes()" class="btn-info">Yes</button>
 		</div>	
 		</div>
         <div class="container-fluid">
