--- a/index.html
+++ b/index.html
@@ -15,30 +15,9 @@
         <div class="container-fluid">
          <div class="row">
           <div class="col-md-12">
-           <p id="youchoose"> You chose:</p>
+           <p id="numberofguesses"> Number of guesses 0</p>
           </div>
          </div>
-         <div class="row">
-          <div class="col-md-12">
-           <p id="computerchose"> Computer chose:</p>
-          </div>
-         </div>
-         <div class="row">
-           <div class="col-md-12">
-             <p id="computerwins">Computer wins: 0</p>
-           </div>
-        </div>
-       <div class="row">
-          <div class="col-md-12">
-           <p id="userwins">Your wins: 0</p>
-          </div>
-      </div>
-      <div class="row">
-        <div class="col-md-12">
-         <p id="ties">Ties: 0</p>
-        <div>
-      </div>
-      </div>
-         <script type="text/javascript" src="game.js"></script>
+         <script type="text/javascript" src="psychic.js"></script>
 	</body>
 </html>
