--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 	</head>
 	<body>
-                <center><img src="assets/images/image1.jpeg" height="200px" width="200px"></center>
+                <center><img id="mainimage" src="assets/images/image1.jpeg" height="200px" width="200px"></center>
 		<div class="panel panel-default">
     	<div class="panel-body"><h1>Want to play psychic??? answer yes or yes</h1> <br/>
                         <button onclick="yes()" class="btn-info">Yes</button>
