--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
                 <center><img id="mainimage" src="assets/images/image1.jpeg" height="200px" width="200px"></center>
 		<div class="panel panel-default">
     	<div class="panel-body"><h1>Want to play psychic??? answer yes or yes</h1> <br/>
+                <h2> I case fold</h2>
                         <button onclick="yes()" class="btn-info">Yes</button>
 		</div>	
 		</div>
