--- a/index.html
+++ b/index.html
@@ -8,15 +8,21 @@
 	<body>
                 <center><img id="mainimage" src="assets/images/image1.jpeg" height="200px" width="200px"></center>
 		<div class="panel panel-default">
-    	<div class="panel-body"><h1>Want to play psychic??? answer yes or yes</h1> <br/>
+    	<div class="panel-body"><h1>Want to play psychic??? answer yes or yes.You get 10 guesses</h1> <br/>
                 <h2> I case fold</h2>
                         <button onclick="yes()" class="btn-info">Yes</button>
+                <h3> You just guessed <span id="user-text"><strong>...Nothing.</strong></span>
 		</div>	
 		</div>
         <div class="container-fluid">
          <div class="row">
-          <div class="col-md-12">
+          <div class="col-md-6">
            <p id="numberofguesses"> Number of guesses 0</p>
+          </div>
+         </div>
+         <div class="row">
+          <div class="col-md-6">
+           <p id="guessedsofar"> You have alreaady guessed</p>
           </div>
          </div>
          <script type="text/javascript" src="psychic.js"></script>
