--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
          </div>
          <div class="row">
           <div class="col-md-6">
-           <p id="guessedsofar"> You have alreaady guessed</p>
+           <p id="guessedsofar"> You have already guessed</p>
           </div>
          </div>
          <script type="text/javascript" src="psychic.js"></script>
