--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
                 <center><img id="mainimage" src="assets/images/image1.jpeg" height="200px" width="200px"></center>
 		<div class="panel panel-default">
     	<div class="panel-body"><h1>Want to play psychic??? answer yes or yes.You get 10 guesses</h1> <br/>
-                <h2> I case fold</h2>
-                        <button onclick="yes()" class="btn-info">Yes</button>
+                <h2> I case fold make a guess.</h2>
+<!--                     <button onclick="yes()" class="btn-info">Yes</button> -->
+                     <input type="text" id="userinput" size="1" autofocus value=" " />
+                     <input type="submit" value="submit" onclick="getData()" />
+                      
 		</div>	
 		</div>
         <div class="container-fluid">
@@ -24,6 +27,6 @@
            <p id="guessedsofar"> You have already guessed</p>
           </div>
          </div>
-         <script type="text/javascript" src="psychic.js"></script>
+         <script type="text/javascript" src="psychic1.js"></script>
 	</body>
 </html>
