--- a/index.html
+++ b/index.html
@@ -27,6 +27,6 @@
            <p id="guessedsofar"> You have already guessed</p>
           </div>
          </div>
-         <script type="text/javascript" src="psychic1.js"></script>
+         <script type="text/javascript" src="psychic.js"></script>
 	</body>
 </html>
